2007-03-13  Vitaly Alexeev <tishka92@yahoo.com>

	Porting to Linux (gcc 3.2.2)
	* base/ear_clip_triangulate_impl.h: fixed gcc compilation error
	* gameswf/gameswf_action.(cpp,h):  fixed gcc compilation warning
	* gameswf/gameswf_impl.h: cleanup
	* gameswf/gameswf_test_ogl.cpp: SDL_VIDEORESIZE ==> todo
	* gameswf/gameswf_mutex.(cpp,h): updated includes
	* gameswf/gameswf_video_base.cpp: reordered initializations of vars
	in struct declaration
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h): simplified & 
	made more readable read_frame() function

2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: added printf for debugging
	* gameswf/gameswf.h,
	* gameswf/gameswf_render_handler_ogl.cpp,
	* gameswf/gameswf_video_base.(cpp,h),
	* gameswf/gameswf_render.(cpp,h),
	* gameswf/gameswf_video_ogl.(cpp,h),
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	OpenGL is accessible only from one thread,
	therefore we are forced to move OpenGL calls to the main thread
	
2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_as_classes/as_netstream.cpp: added
	mutex for working with video frame
	
2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: delay=31 ==> delay=10
	* gameswf/gameswf_as_classes/as_netstream.cpp: fixed a bit bug
	* gameswf/samples/video.(fla,swf): updated, 
	It is possible to start simultaneously 4 video and Flash animation

2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	video queue is running in decoder thread therefore 
	mutex is not needed. Added comments.

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.(cpp,h): reverted
	hash< as_object_interface*, .. <== hash< smart_ptr<as_object_interface>, 
	* gameswf/gameswf_video_base.(cpp,h),
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_mutex.h,